--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for DBIx-Class-Result-ColumnData
 
+0.14    2012-02-27, Nicolas Oudard
+        manage column list in get_column_data as options (Fred)
+
 0.13    2011-10-25, Nicolas Oudard
         use get_column insteed of {_column_data}
 
